--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <title>Villa Agency - Real Estate HTML5 Template</title>
+  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+    <title>Ev JOHNS</title>
       <style>
         .logoImg{
           width: 200px;
           margin-top: 10px;
-          height: 70px;
+          height: 60px;
         }
       </style>
     <!-- Bootstrap core CSS -->
@@ -80,12 +80,13 @@ https://templatemo.com/tm-591-villa-agency
                     <a href="index.html" class="logo">
                         <img src="assets/images/logo.png" class="logoImg" alt="">
                     </a>
+                    <br>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="index.html" class="active">Home</a></li>
-                      <li><a href="properties.html">Properties</a></li>
-                      <li><a href="property-details.html">Property Details</a></li>
+                      <li><a href="#Featured">Featured</a></li>
+                      <li><a href="#adem">New Projects</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
                       <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
                   </ul>   
@@ -123,7 +124,7 @@ https://templatemo.com/tm-591-villa-agency
     </div>
   </div>
 
-  <div class="featured section">
+  <div class="featured section" >
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
@@ -132,7 +133,7 @@ https://templatemo.com/tm-591-villa-agency
             <a href="property-details.html"><img src="assets/images/featured-icon.png" alt="" style="max-width: 60px; padding: 0px;"></a>
           </div>
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-5"  id="Featured">
           <div class="section-heading">
             <h6>| Featured</h6>
             <h2>Johns Concept Architects and Interiors offers  And Have a strong technical expertise and a deep</h2>
@@ -281,7 +282,7 @@ https://templatemo.com/tm-591-villa-agency
     </div>
   </div>
 
-  <div class="section best-deal">
+  <div class="section best-deal" id="adem">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
@@ -468,16 +469,16 @@ https://templatemo.com/tm-591-villa-agency
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="property-details.html"><img src="assets/images/property-04.jpg" alt=""></a>
-            <span class="category">Apartment</span>
-            <h6>$584.500</h6>
-            <h4><a href="property-details.html">12 New Street Miami, OR 12650</a></h4>
+            <a href=""><img src="assets/images/adem/Screenshot_23-8-2024_16167_.jpeg" alt=""></a>
+            <span class="category">Ground Floor</span>
+            <!-- <h6>$584.500</h6> -->
+            <!-- <h4><a href="property-details.html">12 New Street Miami, OR 12650</a></h4> -->
             <ul>
-              <li>Bedrooms: <span>4</span></li>
-              <li>Bathrooms: <span>3</span></li>
-              <li>Area: <span>125m2</span></li>
-              <li>Floor: <span>25th</span></li>
-              <li>Parking: <span>2 cars</span></li>
+              <li>Area: <span>3 cent</span></li>
+              <li>sq.ft: <span>1520</span></li>
+              <li>lakhs: <span>85</span></li>
+              <!-- <li>Floor: <span>25th</span></li>
+              <li>Parking: <span>2 cars</span></li> -->
             </ul>
             <div class="main-button">
               <a href="property-details.html">Schedule a visit</a>
@@ -486,16 +487,16 @@ https://templatemo.com/tm-591-villa-agency
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="property-details.html"><img src="assets/images/property-05.jpg" alt=""></a>
-            <span class="category">Penthouse</span>
-            <h6>$925.600</h6>
-            <h4><a href="property-details.html">34 Beach Street Miami, OR 42680</a></h4>
+            <a href="#"><img src="assets/images/adem/Screenshot_23-8-2024_161554_.jpeg" alt=""></a>
+            <span class="category">First Floor</span>
+            <!-- <h6>$925.600</h6> -->
+            <!-- <h4><a href="property-details.html">34 Beach Street Miami, OR 42680</a></h4> -->
             <ul>
-              <li>Bedrooms: <span>4</span></li>
-              <li>Bathrooms: <span>4</span></li>
-              <li>Area: <span>180m2</span></li>
-              <li>Floor: <span>38th</span></li>
-              <li>Parking: <span>2 cars</span></li>
+              <li>Area: <span>3 cent</span></li>
+              <li>sq.ft: <span>1520</span></li>
+              <li>lakhs: <span>85</span></li>
+              <!-- <li>Floor: <span>25th</span></li>
+              <li>Parking: <span>2 cars</span></li> -->
             </ul>
             <div class="main-button">
               <a href="property-details.html">Schedule a visit</a>
@@ -504,16 +505,16 @@ https://templatemo.com/tm-591-villa-agency
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="property-details.html"><img src="assets/images/property-06.jpg" alt=""></a>
-            <span class="category">Modern Condo</span>
-            <h6>$450.000</h6>
-            <h4><a href="property-details.html">22 New Street Portland, OR 16540</a></h4>
+            <a href="property-details.html"><img src="assets/images/adem/Screenshot_23-8-2024_161536_.jpeg" alt=""></a>
+            <span class="category">Ground Floor</span>
+            <!-- <h6>$450.000</h6> -->
+            <!-- <h4><a href="#">22 New Street Portland, OR 16540</a></h4> -->
             <ul>
-              <li>Bedrooms: <span>3</span></li>
-              <li>Bathrooms: <span>2</span></li>
-              <li>Area: <span>165m2</span></li>
-              <li>Floor: <span>26th</span></li>
-              <li>Parking: <span>3 cars</span></li>
+              <li>Area: <span>3.5 cent</span></li>
+              <li>sq.ft: <span>1630</span></li>
+              <li>lakhs: <span>89</span></li>
+              <!-- <li>Floor: <span>25th</span></li>
+              <li>Parking: <span>2 cars</span></li> -->
             </ul>
             <div class="main-button">
               <a href="property-details.html">Schedule a visit</a>
@@ -548,13 +549,13 @@ https://templatemo.com/tm-591-villa-agency
             <div class="col-lg-6">
               <div class="item phone">
                 <img src="assets/images/phone-icon.png" alt="" style="max-width: 52px;">
-                <h6>010-020-0340<br><span>Phone Number</span></h6>
+                <h6>+91 8075583452<br><span>Phone Number</span></h6>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="item email">
                 <img src="assets/images/email-icon.png" alt="" style="max-width: 52px;">
-                <h6>info@villa.co<br><span>Business Email</span></h6>
+                <span>johnsconceptskochi@gmail.com<br><span>Business Email</span></span>
               </div>
             </div>
           </div>
@@ -601,9 +602,9 @@ https://templatemo.com/tm-591-villa-agency
   <footer>
     <div class="container">
       <div class="col-lg-8">
-        <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. 
+        <p>Copyright © 2024 bytebbot techno solutions Ltd. All rights reserved. 
         
-        Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a> Distribution: <a href="https://themewagon.com">ThemeWagon</a></p>
+        Design: <a rel="nofollow" href="https://byteboot.in" target="_blank">Byteboot</a> Distribution: <a href="https://byteboot.in">Byteboot.in</a></p>
       </div>
     </div>
   </footer>
